--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -15,6 +15,6 @@ jobs:
     - uses: actions/checkout@v1
     - name: Build & Push Image
       run: |
-        echo "${{ secrets.DOCKERPW }}" | docker login -u "dab8106" --password-stdin
-        docker image build -t dab8106/gitaction:v1 .
-        docker push dab8106/gitaction:v1
+        echo "${{ secrets.DOCKERPW }}" | docker login -u "yahia90" --password-stdin
+        docker image build -t yehia90/GIT_python:v1.0'
+        docker push  yehia90/GIT_python:v1.0'
