--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -9,10 +9,11 @@ on:
 jobs:
   build:
 
-    runs-on: self-hosted
+    runs-on: 
+      - self-hosted
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
     - name: Build & Push Image
       run: |
         docker  build -t test-github-actions:v1 .
