--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -16,5 +16,5 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build & Push Image
       run: |
-        docker  build -t test-github-actions:v1 .
+        mkdir accept-test
       
