--- a/.github/workflows/pull_request_rules.yml
+++ b/.github/workflows/pull_request_rules.yml
@@ -16,24 +16,24 @@ jobs:
       
       - name: Check Pull Request Conditions
         run: |
-          # Limit the number of file changes
-          FILE_CHANGES=$(git diff --name-only HEAD^ HEAD | wc -l)
-          if [[ "$FILE_CHANGES" -gt 1 ]]; then
-            echo "🛑 Error: The number of file changes exceeds the limit."
-            exit 1
-          fi
-          
-          # Limit the number of added lines
-          ADDED_LINES=$(git diff --stat HEAD^ HEAD | awk '{print $4}')
-          if [[ "$ADDED_LINES" -gt 100 ]]; then
-            echo "🛑 Error: The number of added lines exceeds the limit."
-            exit 1
-          fi
-          
-          # Perform code analysis or other checks here...
-          # Add your custom condition checks and corresponding error messages.
-          
-          # If no conditions are violated, the script will exit successfully.
+         # Limit the number of file changes
+         FILE_CHANGES=$(git diff --name-only HEAD^ -- | wc -l)
+         if [[ "$FILE_CHANGES" -gt 1 ]]; then
+                echo "🛑 Error: The number of file changes exceeds the limit."
+                  exit 1
+         fi
+
+         # Limit the number of added lines
+            ADDED_LINES=$(git diff --stat HEAD^ -- | awk '{print $4}')
+         if [[ "$ADDED_LINES" -gt 100 ]]; then
+             echo "🛑 Error: The number of added lines exceeds the limit."
+             exit 1
+         fi
+
+# Perform code analysis or other checks here...
+# Add your custom condition checks and corresponding error messages.
+
+# If no conditions are violated, the script will exit successfully.
       
       - name: Refuse Pull Request
         uses: octokit/request-action@v2.x
