--- a/.github/workflows/pull_request_rules.yml
+++ b/.github/workflows/pull_request_rules.yml
@@ -14,26 +14,21 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
       
-      - name: Check Pull Request Conditions
+      - name: Check file changes
         run: |
-            if ! git rev-parse --verify HEAD^ >/dev/null 2>&1; then
-               echo "⚠️ Warning: No previous commit found."
-               exit 0
-            fi
+          FILE_CHANGES=$(git diff --name-only ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }} -- | wc -l)
+          if [[ "$FILE_CHANGES" -gt 1 ]]; then
+            echo "🛑 Error: The number of file changes exceeds the limit."
+            exit 1
+          fi
 
-            # Limit the number of file changes
-            FILE_CHANGES=$(git diff --name-only HEAD^ -- | wc -l)
-            if [[ "$FILE_CHANGES" -gt 1 ]]; then
-                echo "🛑 Error: The number of file changes exceeds the limit."
-                exit 1
-            fi
-
-            # Limit the number of added lines
-            ADDED_LINES=$(git diff --stat HEAD^ -- | awk '{print $4}')
-            if [[ "$ADDED_LINES" -gt 100 ]]; then
-               echo "🛑 Error: The number of added lines exceeds the limit."
-               exit 1
-            fi
+      - name: Check added lines
+        run: |
+          ADDED_LINES=$(git diff --stat ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }} -- | awk '{print $4}')
+          if [[ "$ADDED_LINES" -gt 100 ]]; then
+            echo "🛑 Error: The number of added lines exceeds the limit."
+            exit 1
+          fi
 
 
 # Perform code analysis or other checks here...
