--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,29 @@ Flask==0222
 Flask==0222
 Flask==0222
 Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+
 
 
 
