--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,37 @@ Flask==0222
 Flask==0222
 Flask==0222
 Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+
 
 
 
