--- a/.github/workflows/pull_request_rules.yml
+++ b/.github/workflows/pull_request_rules.yml
@@ -15,6 +15,13 @@ jobs:
 
       - name: Check file changes limit
         run: |
+
+
+         if ! git rev-parse --is-inside-work-tree >/dev/null 2>&1; then
+           echo "::error::Not inside a Git repository. Please run this script within a Git repository."
+           exit 1
+         fi
+
           changed_files=$(git diff --name-only HEAD^)
           file_changes_limit=10
           if [ $(echo "$changed_files" | wc -l) -gt $file_changes_limit ]; then
