--- a/requirements.txt
+++ b/requirements.txt
@@ -102,6 +102,40 @@ Flask==0222
 Flask==0222
 Flask==0222
 Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+
 
 
 
