--- a/requirements.txt
+++ b/requirements.txt
@@ -135,6 +135,29 @@ Flask==0222
 Flask==0222
 Flask==0222
 Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+
 
 
 
