--- a/requirements.txt
+++ b/requirements.txt
@@ -157,6 +157,27 @@ Flask==0222
 Flask==0222
 Flask==0222
 Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+Flask==0222
+
 
 
 
