--- a/.github/workflows/pull_request_rules.yml
+++ b/.github/workflows/pull_request_rules.yml
@@ -24,38 +24,28 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const prFiles = ${{ steps.pr_stats.outputs.changes }};
-            let totalFileChanges = 0;
-            let totalAddedLines = 0;
+            sudo apt update
+            sudo apt install curl
+            sudo apt install jq
+            pr_files=$(jq -r '.pull_request.files' "$GITHUB_EVENT_PATH")
+            totalFileChanges=0
+            totalAddedLines=0
 
-            for (const file of prFiles) {
-              totalFileChanges++;
-              totalAddedLines += file.additions;
-            }
+            for file in $pr_files; do
+            totalFileChanges=$((totalFileChanges + 1))
+            additions=$(jq -r ".additions" <<< "$file")
+            totalAddedLines=$((totalAddedLines + additions))
+            done
 
-            if (totalFileChanges > 1 || totalAddedLines > 1) {
-              const prNumber = context.payload.pull_request.number;
-              const owner = context.payload.repository.owner.login;
-              const repo = context.payload.repository.name;
-              const comment = `Sorry, your pull request exceeds the file changes and added lines limit. Please make sure your changes comply with our guidelines.`;
+            if (( totalFileChanges > 1 || totalAddedLines > 1 )); then
+            prNumber=$(jq -r '.number' "$GITHUB_EVENT_PATH")
+            owner=$(jq -r '.repository.owner.login' "$GITHUB_EVENT_PATH")
+            repo=$(jq -r '.repository.name' "$GITHUB_EVENT_PATH")
+            comment="Sorry, your pull request exceeds the file changes and added lines limit. Please make sure your changes comply with our guidelines."
 
-              const body = {
-                owner: owner,
-                repo: repo,
-                issue_number: prNumber,
-                body: comment
-              };
+            body="{ \"owner\": \"$owner\", \"repo\": \"$repo\", \"issue_number\": $prNumber, \"body\": \"$comment\" }"
+            curl -X POST -H "Authorization: Bearer $GITHUB_TOKEN" -H "Content-Type: application/json" -d "$body" "https://api.github.com/repos/$owner/$repo/issues/$prNumber/comments"
 
-              await github.issues.createComment(body);
-
-              const declineBody = {
-                owner: owner,
-                repo: repo,
-                pull_number: prNumber,
-                state: "closed"
-              };
-
-              await github.pulls.update(declineBody);
-            }
-            }
-
+            declineBody="{ \"owner\": \"$owner\", \"repo\": \"$repo\", \"pull_number\": $prNumber, \"state\": \"closed\" }"
+            curl -X PATCH -H "Authorization: Bearer $GITHUB_TOKEN" -H "Content-Type: application/json" -d "$declineBody" "https://api.github.com/repos/$owner/$repo/pulls/$prNumber"
+            fi
