--- a/.github/workflows/pull_request_rules.yml
+++ b/.github/workflows/pull_request_rules.yml
@@ -18,15 +18,20 @@ jobs:
             "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/files" \
             | jq '.[] | select(.status != "removed")')
           echo "::set-output name=changes::$changes"
+
+
+
+      - name: Setup packages
+        run: |
+          sudo apt update
+          sudo apt install curl
+          sudo apt install jq   
         
       - name: Refuse PR
         uses: actions/github-script@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            sudo apt update
-            sudo apt install curl
-            sudo apt install jq
             pr_files=$(jq -r '.pull_request.files' "$GITHUB_EVENT_PATH")
             totalFileChanges=0
             totalAddedLines=0
