--- a/.github/workflows/pull_request_rules.yml
+++ b/.github/workflows/pull_request_rules.yml
@@ -2,6 +2,9 @@ name: Pull Request Limit
 
 on:
   pull_request:
+    branches:
+      - dev
+      - main
     types:
       - opened
       - synchronize
