--- a/.github/workflows/pull_request_rules.yml
+++ b/.github/workflows/pull_request_rules.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Check Pull Request Conditions
         run: |
           # Limit the number of file changes
-          FILE_CHANGES=$(git diff --name-only HEAD~1 HEAD | wc -l)
+          FILE_CHANGES=$(git diff --name-only --root HEAD | wc -l)
           if [[ "$FILE_CHANGES" -gt 1 ]]; then
             echo "🛑 Error: The number of file changes exceeds the limit."
             exit 1
