--- a/.github/workflows/pull_request_rules.yml
+++ b/.github/workflows/pull_request_rules.yml
@@ -16,13 +16,8 @@ jobs:
       
       - name: Check Pull Request Conditions
         run: |
-          # Limit the number of file changes
-          FILE_CHANGES=$(git diff --name-only --root HEAD | wc -l)
-          if [[ "$FILE_CHANGES" -gt 1 ]]; then
-            echo "🛑 Error: The number of file changes exceeds the limit."
-            exit 1
-          fi
-          
+           exit 0
+           echo " no pull request "
           # If no conditions are violated, the script will exit successfully.
       
       - name: Refuse Pull Request
