--- a/.github/workflows/pull_request_rules.yml
+++ b/.github/workflows/pull_request_rules.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Check commit message
         id: commit
         run: |
-          COMMIT_MSG=$(git log --format=%B -n 1 ${{ github.event.pull_request.head.sha }})
+          COMMIT_MSG=$(git log --format=%B -n 1 ${{ github.sha }})
           if [[ ! "$COMMIT_MSG" =~ "homos" ]]; then
             echo "::set-output name=reject::true"
           else
