--- a/.github/workflows/pull_request_rules.yml
+++ b/.github/workflows/pull_request_rules.yml
@@ -1,8 +1,3 @@
-name: Auto Reject PR
-
-on:
-  pull_request:
-    types: [opened, synchronize]
 
 jobs:
   auto_reject_pr:
@@ -12,22 +7,19 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Check commit message
-        id: commit
+      - name: Count modified files
+        id: file_count
         run: |
-          COMMIT_MSG=$(git log --format=%B -n 1 )
-          if [[ ! "$COMMIT_MSG" =~ "homos" ]]; then
-            echo "::set-output name=reject::true"
-          else
-            echo "::set-output name=reject::false"
-          fi
+          MODIFIED_FILES=$(git diff --name-only HEAD^ HEAD)
+          FILE_COUNT=$(echo "$MODIFIED_FILES" | wc -l)
+          echo "::set-output name=count::$FILE_COUNT"
 
       - name: Reject PR
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        if: steps.commit.outputs.reject == 'true'
+        if: steps.file_count.outputs.count > 1
         run: |
-          COMMENT_BODY="🚫 This pull request has been automatically rejected because the commit message does not contain the keyword 'homos'. Please revise your commit message and resubmit the pull request."
+          COMMENT_BODY="🚫 This pull request has been automatically rejected because it modifies more than one file. Please create separate pull requests for each file change to ensure better reviewability and maintainability."
           curl -X POST -H "Authorization: Bearer $GITHUB_TOKEN" \
             -H "Accept: application/vnd.github.v3+json" \
             -d "{\"body\": \"$COMMENT_BODY\"}" \
