--- a/.github/workflows/pull_request_rules.yml
+++ b/.github/workflows/pull_request_rules.yml
@@ -1,32 +1,21 @@
-name: Auto Reject PR
+name: Count modified files
 
 on:
   push:
-    branches:
-      - master
+    branches: master
 
 jobs:
-  auto_reject_pr:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Count modified files
-        id: file_count
         run: |
-          MODIFIED_FILES=$(git diff --name-only HEAD^ HEAD)
+          MODIFIED_FILES=$(git diff --name-only HEAD^ -- HEAD)
           FILE_COUNT=$(echo "$MODIFIED_FILES" | wc -l)
           echo "::set-output name=count::$FILE_COUNT"
 
-      - name: Reject PR
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        if: steps.file_count.outputs.count > 1
-        run: |
-          COMMENT_BODY="🚫 This pull request has been automatically rejected because it modifies more than one file. Please create separate pull requests for each file change to ensure better reviewability and maintainability."
-          curl -X POST -H "Authorization: Bearer $GITHUB_TOKEN" \
-            -H "Accept: application/vnd.github.v3+json" \
-            -d "{\"body\": \"$COMMENT_BODY\"}" \
-            "https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments"
+      - name: Display the number of modified files
+        run: echo "There are $FILE_COUNT modified files."
