--- a/.github/workflows/pull_request_rules.yml
+++ b/.github/workflows/pull_request_rules.yml
@@ -16,10 +16,10 @@ jobs:
       
       - name: Check Pull Request Conditions
         run: |
-           exit 1
-           echo " no pull request "
+            MODIFIED_FILES=$(git diff dev --name-only )
+            FILE_COUNT=$(echo "$MODIFIED_FILES" | wc -l)
+            echo "::set-output name=count::$FILE_COUNT"
 
-  
           # If no conditions are violated, the script will exit successfully.
       
       - name: Refuse Pull Request
