--- a/.github/workflows/pull_request_rules.yml
+++ b/.github/workflows/pull_request_rules.yml
@@ -3,6 +3,10 @@ name: Count modified files
 on:
   pull_request:
     types: [opened, synchronize]
+    branches:
+      - master
+      - dev
+ 
 
 
 jobs:
