--- a/.github/workflows/pull_request_rules.yml
+++ b/.github/workflows/pull_request_rules.yml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Count modified files
         run: |
-            MODIFIED_FILES=$(git diff master --name-only )
+            MODIFIED_FILES=$(git diff master dev --name-only )
             FILE_COUNT=$(echo "$MODIFIED_FILES" | wc -l)
             echo "::set-output name=count::$FILE_COUNT"
 
