--- a/.github/workflows/pull_request_rules.yml
+++ b/.github/workflows/pull_request_rules.yml
@@ -1,20 +1,30 @@
-name: Count modified files
+name: Example workflow
 
 on:
   pull_request:
-    types: [opened, synchronize]
-
+    branches:
+      - main
+      - dev
 
 jobs:
-  build:
+  example-job:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v3
-
+      - name: Checkout codee
+        uses: actions/checkout@v2
+      - name: Get base branch name
+        run: echo "Base branch name is ${{ github.base_ref }}"
+      - name: fetch origin 
+        run: git fetch origin
+      - name: Get head branch name
+        run: echo "Head branch name is ${{ github.head_ref }}"\
+      - name: Get branch name
+        run: git branch -a
+      - name: Get current branch name
+        run: echo "${GITHUB_REF#refs/heads/}"
       - name: Count modified files
         run: |
-            MODIFIED_FILES=$(git diff master --name-only )
+            MODIFIED_FILES=$(git diff origin/master origin/dev --name-only)
             FILE_COUNT=$(echo "$MODIFIED_FILES" | wc -l)
             echo "::set-output name=count::$FILE_COUNT"
 
