--- a/.github/workflows/pull_request_rules.yml
+++ b/.github/workflows/pull_request_rules.yml
@@ -26,6 +26,11 @@ jobs:
             MODIFIED_FILES=$(git diff origin/master origin/dev --name-only)
             FILE_COUNT=$(echo "$MODIFIED_FILES" | wc -l)
             echo "::set-output name=count::$FILE_COUNT"
+            echo "$FILE_COUNT"
+            if [ $FILE_COUNT-gt 1 ]; then
+            echo "Too many file changes"
+            exit 1
+            fi
 
           # If no conditions are violated, the script will exit successfully.
       
