--- a/.github/workflows/pull_request_rules.yml
+++ b/.github/workflows/pull_request_rules.yml
@@ -22,19 +22,23 @@ jobs:
       - name: Get current branch name
         run: echo "${GITHUB_REF#refs/heads/}"
       - name: Count modified files
-        run: |
-            MODIFIED_FILES=$(git diff origin/master origin/dev --name-only)
-            FILE_COUNT=$(echo "$MODIFIED_FILES" | wc -l)
-            echo "::set-output name=count::$FILE_COUNT"
-            echo "$FILE_COUNT"
-           
-     
-      - name: Reject PR
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          COMMENT_BODY="🚫 This pull request has been automatically rejected because it modifies more than one file. Please create separate pull requests for each file change to ensure better reviewability and maintainability."
-          curl -X POST -H "Authorization: Bearer $GITHUB_TOKEN" \
+            MODIFIED_FILES=$(git diff origin/master origin/dev --name-only)
+            FILE_COUNT=$(echo "$MODIFIED_FILES" | wc -l)
+            echo "$FILE_COUNT"
+            if [ &FILE_COUNT -gt 2 ]; then
+            COMMENT_BODY="🚫 This pull request has been automatically rejected because it modifies more than one file."
+            curl -X POST -H "Authorization: Bearer $GITHUB_TOKEN" \
             -H "Accept: application/vnd.github.v3+json" \
             -d "{\"body\": \"$COMMENT_BODY\"}" \
             "https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments"
+            else
+            COMMENT_BODY="This pull request has been automatically approved ."
+            curl -X POST -H "Authorization: Bearer $GITHUB_TOKEN" \
+            -H "Accept: application/vnd.github.v3+json" \
+            -d "{\"body\": \"$COMMENT_BODY\"}" \
+            "https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments"
+            fi
+            
