--- a/.github/workflows/pull_request_rules.yml
+++ b/.github/workflows/pull_request_rules.yml
@@ -41,4 +41,26 @@ jobs:
             -d "{\"body\": \"$COMMENT_BODY\"}" \
             "https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments"
             fi
+
+
             
+      - name: Count modified files
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+            ADDED_LINES=$(git diff --shortstat origin/main...origin/dev | awk '{print $4}')
+            echo "$ADDED_LINES"
+            if [ "$ADDED_LINES" -gt 5 ]; then
+            COMMENT_BODY="🚫 This pull request has been automatically rejected because it more than 5 lines added."
+            curl -X POST -H "Authorization: Bearer $GITHUB_TOKEN" \
+            -H "Accept: application/vnd.github.v3+json" \
+            -d "{\"body\": \"$COMMENT_BODY\"}" \
+            "https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments"
+            else
+            COMMENT_BODY="This pull request has been automatically approved just 5 lines addedd ."
+            curl -X POST -H "Authorization: Bearer $GITHUB_TOKEN" \
+            -H "Accept: application/vnd.github.v3+json" \
+            -d "{\"body\": \"$COMMENT_BODY\"}" \
+            "https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments"
+            fi
+                 
