--- a/.github/workflows/pull_request_rules.yml
+++ b/.github/workflows/pull_request_rules.yml
@@ -57,10 +57,12 @@ jobs:
             -d "{\"body\": \"$COMMENT_BODY\"}" \
             "https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments"
             else
-            COMMENT_BODY="This pull request has been automatically approved just 5 lines addedd ."
-            curl -X POST -H "Authorization: Bearer $GITHUB_TOKEN" \
-            -H "Accept: application/vnd.github.v3+json" \
-            -d "{\"body\": \"$COMMENT_BODY\"}" \
-            "https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments"
+                curl --request PATCH \
+               --url https://api.github.com/repos/:owner/:repo/pulls/:pull_number \
+               --header 'authorization: Bearer YOUR_ACCESS_TOKEN' \
+               --header 'content-type: application/json' \
+               --data '{
+                "state": "closed"
+                 }'
             fi
                  
