--- a/.github/workflows/pull_request_rules.yml
+++ b/.github/workflows/pull_request_rules.yml
@@ -59,7 +59,7 @@ jobs:
             else
                 curl --request PATCH \
                --url https://api.github.com/repos/:owner/:repo/pulls/:pull_number \
-               --header 'authorization: Bearer YOUR_ACCESS_TOKEN' \
+               --header 'authorization: Bearer $GITHUB_TOKEN' \
                --header 'content-type: application/json' \
                --data '{
                 "state": "closed"
