--- a/.github/workflows/pull_request_rules.yml
+++ b/.github/workflows/pull_request_rules.yml
@@ -60,7 +60,7 @@ jobs:
                 curl --request PATCH \
                --url https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }} \
                --header 'authorization: Bearer $PASS' \
-               --header 'content-type: application/json' \
+               --header "Accept: application/vnd.github.v3+json"  \
                --data '{
                 "state": "closed"
                  }'
