--- a/.github/workflows/pull_request_rules.yml
+++ b/.github/workflows/pull_request_rules.yml
@@ -46,23 +46,23 @@ jobs:
             
       - name: Count modified files
         env:
-          PASS: ${{ secrets.PASS }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
             ADDED_LINES=$(git diff --shortstat origin/master...origin/dev | awk '{print $4}')
             echo "$ADDED_LINES"
             if [ "$ADDED_LINES" -gt 10 ]; then
             COMMENT_BODY="🚫 This pull request has been automatically rejected because it more than 5 lines added."
-            curl -X POST -H "Authorization: Bearer $PASS" \
+            curl -X POST -H "Authorization: Bearer $GITHUB_TOKEN" \
             -H "Accept: application/vnd.github.v3+json" \
             -d "{\"body\": \"$COMMENT_BODY\"}" \
             "https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments"
             else
-                curl --request PATCH \
-               --url https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }} \
-               --header 'authorization: Bearer $PASS' \
-               --header "Accept: application/vnd.github.v3+json"  \
-               --data '{
-                "state": "closed"
-                 }'
+               curl -X PATCH \
+              -H "Authorization: Bearer $GITHUB_TOKEN" \
+              -H "Accept: application/vnd.github.v3+json" \
+              -d '{
+                  "state": "closed"
+                  }' \
+                  https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}
             fi
                  
