--- a/.github/workflows/pull_request_rules.yml
+++ b/.github/workflows/pull_request_rules.yml
@@ -61,6 +61,7 @@ jobs:
               -H "Authorization: Bearer $GITHUB_TOKEN" \
               -H "Accept: application/vnd.github.v3+json" \
               -d '{
+                  "body": "This pull request has been closed."
                   "state": "closed"
                   }' \
                   https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}
