--- a/.github/workflows/pull_request_rules.yml
+++ b/.github/workflows/pull_request_rules.yml
@@ -29,15 +29,14 @@ jobs:
             FILE_COUNT=$(echo "$MODIFIED_FILES" | wc -l)
             echo "$FILE_COUNT"
             if [ "$FILE_COUNT" -gt 2 ]; then
-             curl -X PATCH \
-              -H "Authorization: Bearer $GITHUB_TOKEN" \
-              -H "Accept: application/vnd.github.v3+json" \
-              -d '{
-                  "body": "This pull request has been closed because the limit of files changed are exceeded." ,
-                  "state": "closed"
-                  }' \
-                  https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}
+            
+             curl -X POST -H "Authorization: Bearer $GITHUB_TOKEN" \
+            -H "Accept: application/vnd.github.v3+json" \
+            -d '{"body": "Please make the following changes: please dont exceed limit of changes files", "event": "REQUEST_CHANGES"}' \
+             "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/reviews"
+             
             else
+            
             COMMENT_BODY="✅ This pull request has been automatically approved files changed in the limit."
             curl -X POST -H "Authorization: Bearer $GITHUB_TOKEN" \
             -H "Accept: application/vnd.github.v3+json" \
@@ -47,7 +46,7 @@ jobs:
 
 
             
-      - name: Count modified files
+      - name: Count new added lines
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
@@ -57,8 +56,9 @@ jobs:
             
             curl -X POST -H "Authorization: Bearer $GITHUB_TOKEN" \
             -H "Accept: application/vnd.github.v3+json" \
-            -d '{"body": "Please make the following changes: ...", "event": "REQUEST_CHANGES"}' \
+            -d '{"body": "Please make the following changes: please dont exceed limit of added lines", "event": "REQUEST_CHANGES"}' \
              "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/reviews"
+             
             else
             
             COMMENT_BODY="✅ This pull request has been automatically approved number of added lines are in limit."
@@ -77,14 +77,10 @@ jobs:
       - name: Post comment if errors in dart code
         if: ${{ failure() }}
         run: |
-              curl -X PATCH \
-              -H "Authorization: Bearer $GITHUB_TOKEN" \
+              curl -X POST -H "Authorization: Bearer $GITHUB_TOKEN" \
               -H "Accept: application/vnd.github.v3+json" \
-              -d '{
-                  "body": "This pull request has been closed because there is an errror on dart code." ,
-                  "state": "closed"
-                  }' \
-                  https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}   
+              -d '{"body": "Please make the following changes: check your code before push please", "event": "REQUEST_CHANGES"}' \
+              "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/reviews"
                   
       - name: Post comment if no errors in dart code
         if: ${{ !failure() }}        
