--- a/requirements.txt
+++ b/requirements.txt
@@ -165,10 +165,10 @@ Flask==0222
 Flask==0222
 Flask==0222
 Flask==0222
-Flask==0222
-Flask==0222
-Flask==0222
-Flask==0
+Flask==022
+Flask==022
+Flask==022
+Flask==
 d
 d
 d
